--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <nav>
         <ul>
                 <li> <a href="HTML/1%20Formatos%20Texto.html">Formatos</a> </li>
-                <li> <a href="HTML/2%20Listas.html">Listas</a> </li>
+                <li> <a href="HTML/2-Listas.html">Listas</a> </li>
                 <li> <a href="HTML/3%20Enlaces.html">Enlaces</a> </li>
                 <li> <a href="HTML/4%20Tablas.html">Tablas</a> </li>
                 <li> <a href="HTML/5%20Imagenes.html">Imagenes</a> </li>
