--- a/HTML/2 Listas.html
+++ b/HTML/2 Listas.html
@@ -229,6 +229,7 @@
             <li><a href="HTML/8%20Formulario.html">Formularios</a></li>
         </ul>
 
+    </nav>
        
         <main>
             <section>
