--- a/HTML/3 Enlaces.html
+++ b/HTML/3 Enlaces.html
@@ -185,7 +185,7 @@
             <li><a href="HTML/7%20Video.html">Videos</a></li>
             <li><a href="HTML/8%20Formulario.html">Formularios</a></li>
         </ul>
-
+    </nav>
           
     <main>
        
