--- a/HTML/6 Audios.html
+++ b/HTML/6 Audios.html
@@ -45,6 +45,7 @@
             <li><a href="HTML/7%20Video.html">Videos</a></li>
             <li><a href="HTML/8%20Formulario.html">Formularios</a></li>
         </ul>
+    </nav>
     
     <main>
         <section>
