--- a/HTML/3 Enlaces.html
+++ b/HTML/3 Enlaces.html
@@ -176,14 +176,14 @@
 <!--            Menu de la pagina Web-->
     <nav>
         <ul>
-            <li><a href="HTML/1%20Formatos%20Texto.html">Formatos</a></li>
-            <li><a href="HTML/2%20Listas.html">Listas</a></li>
-            <li><a href="HTML/3%20Enlaces.html">Enlaces</a></li>
-            <li><a href="HTML/4%20Tablas.html">Tablas</a></li>
-            <li><a href="HTML/5%20Imagenes.html">Imágenes</a></li>
-            <li><a href="HTML/6%20Audios.html">Audios</a></li>
-            <li><a href="HTML/7%20Video.html">Videos</a></li>
-            <li><a href="HTML/8%20Formulario.html">Formularios</a></li>
+            <li><a href="1%20Formatos%20Texto.html">Formatos</a></li>
+            <li><a href="2%20Listas.html">Listas</a></li>
+            <li><a href="3%20Enlaces.html">Enlaces</a></li>
+            <li><a href="4%20Tablas.html">Tablas</a></li>
+            <li><a href="5%20Imagenes.html">Imágenes</a></li>
+            <li><a href="6%20Audios.html">Audios</a></li>
+            <li><a href="7%20Video.html">Videos</a></li>
+            <li><a href="8%20Formulario.html">Formularios</a></li>
         </ul>
     </nav>
           
